# collapse-duplication

./: README.org  collapse-duplication.cabal  stack.yaml
app/: Main.hs
src/: Collapse.hs  Filter.hs  Types.hs
