name:                collapse-duplication
version:             0.3.2.0
synopsis:            Collapse the duplication output into clones and return their frequencies.
description:         Please see README.md
homepage:            http://github.com/GregorySchwartz/collapse-duplication#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gsch@mail.med.upenn.edu
copyright:           Copyright: (c) 2016 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Collapse
                     , Filter
  build-depends:       base >= 4.7 && < 5
                     , cassava
                     , bytestring
                     , bytestring-show
                     , containers
                     , hierarchical-clustering
                     , lens
  ghc-options:         -O2
  default-language:    Haskell2010

executable collapse-duplication
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , collapse-duplication
                     , optparse-generic
                     , cassava
                     , bytestring
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/collapse-duplication
